// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SoulkillerProtocolPanel > snapshot: complete phase 1`] = `
"┌──────────────────────────────────────────────────────┐
│  SOULKILLER PROTOCOL                                 │
│                                                      │
│   ▓ initiating soul capture...         ✓             │
│                                                      │
│   ▓Phase 1: Reconnaissance ✓                         │
│     ▸ 🔍 Linus Torvalds who is → 5 results ✓         │
│     ▸ 🔍 Linus Torvalds → 2 results ✓                │
│     ▸ 🔍 Linus Torvalds interview opinio… → 4        │
│ results ✓                                            │
│     ▸ 🔍 Linus Torvalds personality MBTI → 3 results │
│  ✓                                                   │
│                                                      │
│   ▓ target acquired: Linus Torvalds                  │
│     classification: PUBLIC ENTITY                    │
│     origin: Linux Foundation                         │
│                                                      │
│   ▓soul fragments captured: 32                       │
│     extraction time: 8.5s                            │
│                                                      │
└──────────────────────────────────────────────────────┘"
`;

exports[`SoulkillerProtocolPanel > snapshot: unknown entity 1`] = `
"┌──────────────────────────────────────────────────────┐
│  SOULKILLER PROTOCOL                                 │
│                                                      │
│   ▓ initiating soul capture...         ✓             │
│                                                      │
│   ▓ target scan: NoOneKnows                          │
│     classification: UNKNOWN ENTITY                   │
│     cyberspace footprint: INSUFFICIENT               │
│                                                      │
│   ██ MANUAL EXTRACTION REQUIRED ██                   │
│                                                      │
│   target not found in cyberspace.                    │
│   provide raw neural data to proceed.                │
│                                                      │
└──────────────────────────────────────────────────────┘"
`;

exports[`SoulkillerProtocolPanel > snapshot: world mode complete 1`] = `
"┌──────────────────────────────────────────────────────┐
│  WORLDFORGE PROTOCOL                                 │
│                                                      │
│   ▓ Initializing world scan...         ✓             │
│                                                      │
│   ▓Phase 1: Reconnaissance ✓                         │
│     ▸ 🔍 Night City wiki → 8 results ✓               │
│     ▸ 🔍 Night City districts → 5 results ✓          │
│                                                      │
│   ▓ target acquired: Night City                      │
│     classification: FICTIONAL UNIVERSE               │
│     origin: Cyberpunk 2077                           │
│                                                      │
│   ▓soul fragments captured: 24                       │
│     extraction time: 12.0s                           │
│                                                      │
└──────────────────────────────────────────────────────┘"
`;

exports[`SoulkillerProtocolPanel > snapshot: world mode unknown setting 1`] = `
"┌──────────────────────────────────────────────────────┐
│  WORLDFORGE PROTOCOL                                 │
│                                                      │
│   ▓ Initializing world scan...         ✓             │
│                                                      │
│   ▓ target scan: MyOriginalWorld                     │
│     classification: UNKNOWN ENTITY                   │
│     cyberspace footprint: INSUFFICIENT               │
│                                                      │
│   ██ MANUAL EXTRACTION REQUIRED ██                   │
│                                                      │
│   target not found in cyberspace.                    │
│   provide raw neural data to proceed.                │
│                                                      │
└──────────────────────────────────────────────────────┘"
`;
